# KurvotBD

./: .gitignore  CMakeLists.txt  Interface.md  LICENSE  Solution.md  docker-compose.yml  fixed.md
DataBaseScripts/: BugFilter.sql  BusinessReports.sql  CleanData.sql  CreateRoles.sql  CreateTables.sql  EmployeeFilter.sql  FinancialReport.sql  GenerateData.sql  GenerateSpecification.sql  InfrastructureReport.sql  MethodologyReport.sql  ProjecFilter.sql  ProjectStatusReport.sql  SpecializationReport.sql  TechnologyReport.sql  TestQueries.sql  Workload.sql
doc/: TablesStruct.drawio
lib/: CMakeLists.txt
lib/src/: DataBase.cpp  DataBase.hpp  FilterModels.hpp  FormMeta.hpp  Models.hpp  SqlFunctions.hpp
lib/src/DataBaseSourse/SqlRequests/: AppendParam.hpp  Converters.hpp  MetaData.hpp  ModelMeta.hpp  ToParams.hpp
lib/src/util/: util.hpp
src/: Main.qml  main.cpp  qmldir
src/DataBaseSourse/: DataBase.cpp  DataBase.hpp
src/GenericModel/: GenericTableModel.cpp  GenericTableModel.hpp
src/Models/: AdminTable.cpp  AdminTable.hpp  BugsTableModel.cpp  BugsTableModel.hpp  ButtonFilterModel.cpp  ButtonFilterModel.hpp  ClientsTableModel.cpp  ClientsTableModel.hpp  DocumentationTableModel.cpp  DocumentationTableModel.hpp  EmployeersTableModel.cpp  EmployeersTableModel.hpp  EmployeesTableModel.cpp  EmployeesTableModel.hpp  EmployeesWorkloadModel.cpp  EmployeesWorkloadModel.hpp  FormHelper.hpp  InfrastructureTableModel.cpp  InfrastructureTableModel.hpp  MonthlyFinancialTableModel.cpp  MonthlyFinancialTableModel.hpp  ProfitabilityTableModel.cpp  ProfitabilityTableModel.hpp  ProjectStatusModel.cpp  ProjectStatusModel.hpp  ProjectTeamTableModel.cpp  ProjectTeamTableModel.hpp  ProjectTechnologiesTableModel.cpp  ProjectTechnologiesTableModel.hpp  ProjectsTableModel.cpp  ProjectsTableModel.hpp  ReleasesTableModel.cpp  ReleasesTableModel.hpp  SessionManager.cpp  SessionManager.hpp  SpecificationTableModel.cpp  SpecificationTableModel.hpp  TestingEfficiencyTableModel.cpp  TestingEfficiencyTableModel.hpp
src/Qml/: AdminPanel.qml  DatePicker.qml  Documentation.qml  Documents.qml  Employeers.qml  Employees.qml  FilterDelegate.qml  FinancesAndInfrastructure.qml  LoginDialog.qml  Main.qml  MainWidget.qml  ProjectsAndClients.qml  ReportsAndDocuments.qml  Sales.qml  Sidebar.qml  StatusReports.qml  TeamReports.qml  Technologies.qml  TestingAndBug.qml
src/Qml/Components/Dialogs/: BugDialog.qml  DocDialog.qml  InfraDialog.qml  MonthlyDialog.qml  ProfitDialog.qml  ProjectDialog.qml  SpecDialog.qml  TeamDialog.qml  TechDialog.qml  qmldir
src/Qml/Components/Forms/: DoubleSpinBox.qml  GenericEditForm.qml
src/Qml/Components/Tables/: BugsTable.qml  ClientsTable.qml  DocumentationTable.qml  EfficiencyTable.qml  EmployeesTable.qml  InfrastructureTable.qml  MonthlyFinancialTable.qml  ProfitabilityTable.qml  ProjectsTable.qml  ReleasesTable.qml  SpecificationTable.qml  TeamTable.qml  TechnologiesTable.qml  WorkloadTable.qml  qmldir
test/: AppendModelTest.cpp  ConvertersTest.cpp  DeleteModelTest.cpp  MetaFunc.cpp  SelectModelTest.cpp  SqlFunction.cpp
